--- a/pass.html
+++ b/pass.html
@@ -33,11 +33,10 @@
 </P>
 <script>
 
+eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('n v(){3 x=z;3 a=4.5("p").7;3 b;3 c=4.5("r").7;3 d=4.5("m").7;3 e=4.5("o").7;3 f=4.5("q").7;3 g;t(d>0){a=d*9/e;g=a/c;b=g*h.i*e/j/0.k;b=b.8(1)}s{d=a*e/9;g=a/c;b=g*h.i*e/j/0.k;b=b.8(1);d=d.8(2)}4.5("u").l="请按照如下的参数输入调试:";4.5("w").l="y=2"+"</6>"+"A="+b+"</6>"+"B="+c+"</6>"+"C="+d+"</6>"+"D="+f+"</6>"+"E="+e;F a,x}',42,42,'|||var|document|getElementById|br|value|toFixed|9550||||||||60|46|1000|95|innerHTML|input3|function|input4|input6|input5|input2|else|if|demo|myfunction|demoPower||P300|false|P304|p305|P307|P310|P311|return'.split('|'),0,{}))
 
 
-
-    eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('n w(){5 x=A;5 a=3.4("p").6;5 b;5 c=3.4("r").6;5 d=3.4("m").6;5 e=3.4("o").6;5 f=3.4("q").6;5 g;t(d>0){a=d*9/e;g=a/c;b=g*h.i*e/j/0.k;b=b.8(1)}s{d=a*e/9;g=a/c;b=g*h.i*e/j/0.k;b=b.8(1);d=d.8(2)}3.4("u").6=a;3.4("v").l="请按照如下的参数输入调试:";3.4("y").l="z=2"+"</7>"+"B="+b+"</7>"+"C="+c+"</7>"+"D="+d+"</7>"+"E="+f+"</7>"+"F="+e;G a,x}',43,43,'|||document|getElementById|var|value|br|toFixed|9550||||||||60|46|1000|95|innerHTML|input3|function|input4|input6|input5|input2|else|if|input7|demo|myfunction||demoPower|P300|false|P304|p305|P307|P310|P311|return'.split('|'),0,{}))
-
+   
 </script>
 <button onclick="myfunction()" >计算</button>
 
