--- a/pass.html
+++ b/pass.html
@@ -38,7 +38,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
 
    
 </script>
-<button onclick="myfunction()" >计算</button>
+<button onclick="myfunction()"  style="height: 50px;width: 80px">计算</button>
 
 
 
