--- a/pass.html
+++ b/pass.html
@@ -40,7 +40,7 @@ eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a
 </script>
 <button onclick="myfunction()"  style="height: 50px;width: 80px">计算</button>
 
-
+<HR WIDTH="100%" SIZE="2" ALIGN="Center" NOSHADE COLOR="#000000">
 
 <p id="demo"></p>
 <p id="demoPower"></p>
